--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/gb_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/LegionTheme"
@@ -20,12 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.GuildMembersActivity">
+        <activity android:name=".ui.GuildMembersActivity"
+            android:label="Members">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.GuildMemberProfileActivity">
+        <activity android:name=".ui.GuildMemberProfileActivity"
+            android:label="Profile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.GuildMembersActivity" />
