--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,32 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.3'
     defaultConfig {
         applicationId "com.gomart.guildbuddy"
-        minSdkVersion 19
-        targetSdkVersion 24
+        minSdkVersion 25
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
-        buildConfigField 'String', 'URL', '"api.battle.net"'
-        buildConfigField 'String', 'URL_START', '"https://us."'
+        buildConfigField 'String', 'URL', '"https://us.api.blizzard.com/"'
+        buildConfigField 'String', 'URL_TOKEN', '"https://us.battle.net/"'
+        //buildConfigField 'String', 'URL_START', '"https://us."'
         buildConfigField 'String', 'CHAR_URL', '"https://render-us.worldofwarcraft.com/character/"'
         buildConfigField 'String', 'LOCALE', '"en_US"'
-        buildConfigField 'String', 'API_KEY', '"33nxy4qemg2zmf9dyvk3qzbpmzsezjtg"'
+        buildConfigField 'String', 'NAMESPACE', '"profile-us"'
+        buildConfigField 'String', 'API_KEY', '"10a706d5b5b445bda040772571515014"'
+        buildConfigField 'String', 'CLIENT_ID', '"10a706d5b5b445bda040772571515014"'
+        buildConfigField 'String', 'CLIENT_SECRET', '"de2RV6e5LOjkSycnV995MzYJJPCb5pOt"'
+        buildConfigField 'String', 'GRANT_TYPE', '"client_credentials"'
+        //buildConfigField 'String', 'API_KEY', '"33nxy4qemg2zmf9dyvk3qzbpmzsezjtg"'
     }
     buildTypes {
         release {
@@ -28,34 +38,69 @@ android {
             minifyEnabled false
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0'
+
+    //fragment nav
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+
+    //constraint layout
+    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
 
     //RETROFIT
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //OKHTTP
-    compile 'com.squareup.okhttp3:okhttp:3.4.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
 
-    //DAGGER 2
-    compile 'com.google.dagger:dagger:2.8'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
-    apt "com.google.dagger:dagger-compiler:2.8"
-    provided 'javax.annotation:jsr250-api:1.0'
+    // VIEWMODEL
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // LIVEDATA
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    //CARDVIEW
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    //RECYCLERVIEW
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //COROUTINES
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
+
+    //HILT
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
     //PICASSO
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //TEST
+    testImplementation 'junit:junit:4.12'
 
 }
