--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'kotlin-allopen'
 
+allOpen {
+    // allows mocking for classes w/o directly opening them for release builds
+    annotation 'com.gomart.guildbuddy.testing.OpenClass'
+}
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.3'
@@ -48,6 +53,10 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
     }
+    sourceSets {
+        androidTest.java.srcDirs += "src/test-common/java"
+        test.java.srcDirs += "src/test-common/java"
+    }
 }
 
 dependencies {
@@ -58,7 +67,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
 
     //fragment nav
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
@@ -89,7 +98,7 @@ dependencies {
 
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //COROUTINES
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
@@ -112,18 +121,20 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //MOCKITO
-    testImplementation 'org.mockito:mockito-core:2.25.0'
+    testImplementation "org.mockito:mockito-core:3.5.10"
     testImplementation "org.mockito:mockito-all:1.10.19"
-    testImplementation "org.mockito:mockito-android:2.25.0"
+    androidTestImplementation "org.mockito:mockito-android:3.5.10"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.0.0"
 
     //TESTING
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'androidx.test:runner:1.3.0'
-    testImplementation 'androidx.test:rules:1.3.0'
-    testImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation "androidx.arch.core:core-runtime:2.1.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
 }
