--- a/build.gradle
+++ b/build.gradle
@@ -2,29 +2,17 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:1.3.72"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0"
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.47' apply false
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.9.0" apply false
 }
