--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,14 +123,15 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //MOCKITO
-    testImplementation "org.mockito:mockito-core:3.5.10"
-    testImplementation "org.mockito:mockito-all:1.10.19"
-    androidTestImplementation "org.mockito:mockito-android:3.5.10"
+    testImplementation "org.mockito:mockito-core:5.4.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation "org.mockito:mockito-inline:5.2.0"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.0.0"
 
     //TESTING
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation 'androidx.test:core:1.5.0'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
