--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        hilt = 2.47
+        room = '2.5.2'
+        retrofit = '2.9.0'
+        lifecycle = '2.6.1'
+        okhttp = '4.3.1'
+    }
     repositories {
         google()
     }
